[package]
name = "ytesrev"
version = "0.1.0"
authors = ["loovjo <jonathan.loov@gmail.com>"]

[lib]
name = "ytesrev"
path = "src/lib.rs"

[[bin]]
name = "ytesrev-sample"
path = "src/example/showcase.rs"

[dependencies]
sdl2 = "0.31.0"
rand = "0.5.4"
png = "0.12.0"
lazy_static = "1.0.2"

[features]
default = []
debug_boxes = []
